Added contact info to HTML

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     </head>
 
     <body>
-        <!-- Body -->
         <h1>Student Bio</h1>
 
         <h2>Brandon Haley</h2>
@@ -20,7 +19,13 @@
             <li>Love to script/program</li>
         </ul>
     </body>
-
+    <h2>Contact Info</h2>
+    <ul>
+        <li>Email: Kyle7286@GMail.com</li>
+        <li>Github: Kyle7286</li>
+        <li>Portfolio: coming soon</li>
+        <li>Love to script/program</li>
+    </ul>
 
 
 
